manifests/cluster-addons/oauth2-proxy/templates/middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forwardauth
  namespace: oauth2-proxy
spec:
  forwardAuth:
    address: <http://oauth2-proxy.oauth2-proxy.svc.cluster.local/oauth2/>
    trustForwardHeader: true
