manifests/cluster-addons/oauth2-proxy/templates/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  entryPoints:
    - websecure
  routes:
    - match: PathPrefix(`/oauth2/`)
      kind: Rule
      services:
        - name: oauth2-proxy
          port: 80
      middlewares:
        - name: headers
          namespace: oauth2-proxy
